WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229081
[IFC] Undo incorrect InlineTextBox -> LegacyInlineTextBox renaming
https://bugs.webkit.org/show_bug.cgi?id=229081
Summary
[IFC] Undo incorrect InlineTextBox -> LegacyInlineTextBox renaming
alan
Reported
2021-08-13 10:46:41 PDT
ssia
Attachments
Patch
(3.26 KB, patch)
2021-08-13 10:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-08-13 10:48:00 PDT
Created
attachment 435494
[details]
Patch
Antti Koivisto
Comment 2
2021-08-13 10:49:54 PDT
Comment on
attachment 435494
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=435494&action=review
> Source/WebCore/layout/layouttree/LayoutBox.h:64 > - LegacyInlineTextBoxFlag = 1 << 1, > + InlineTextBoxFlag = 1 << 1,
🤡
EWS
Comment 3
2021-08-20 06:29:29 PDT
Committed
r281312
(
240732@main
): <
https://commits.webkit.org/240732@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435494
[details]
.
Radar WebKit Bug Importer
Comment 4
2021-08-20 06:30:22 PDT
<
rdar://problem/82168176
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug