[IFC] Undo incorrect InlineTextBox -> LegacyInlineTextBox renaming https://bugs.webkit.org/show_bug.cgi?id=229081

Reviewed by Antti Koivisto.

* layout/formattingContexts/inline/text/TextUtil.h:
* layout/layouttree/LayoutBox.h:
(WebCore::Layout::Box::isInlineTextBox const):
* layout/layouttree/LayoutInlineTextBox.cpp:
(WebCore::Layout::InlineTextBox::InlineTextBox):


Canonical link: https://commits.webkit.org/240732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281312 268f45cc-cd09-0410-ab3c-d52691b4dbfc