Source/WebCore/layout/formattingContexts/inline/text/TextUtil.h
@@ -37,7 +37,6 @@ class RenderStyle;
 
 namespace Layout {
 
-class LegacyInlineTextBox;
 class InlineTextBox;
 class InlineTextItem;
 
